# rust-vue-template

./: .gitignore  Cargo.toml  Makefile  README.md
cli-client/: Cargo.toml
cli-client/src/: main.rs
client-cli/: Cargo.toml
client-web/: README.md  package-lock.json  package.json  tsconfig.json
server/: Cargo.toml
server/src/: main.rs
shared/src/: lib.rs
