[package]
name = "client-cli"
version = "0.1.0"
edition = "2021"

authors = ["Alexandre Crestani <alexandrecrestani@hotmail.com>"]
description = "Template for a client application, written in Rust, that connects to a server"
license = "MIT"

[[bin]]
name = "client-cli"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }